--- a/src/web/NSE.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,8 @@
-﻿<ul class="navbar-nav">
-    @if (Context.User.Identity.IsAuthenticated)
+﻿@using NSE.WebApp.MVC.Extensions
+@inject IUser AppUser
+
+<ul class="navbar-nav">
+    @if (AppUser.EstaAutenticado())
     {
     <li class="nav-item">
         <a class="nav-link text-dark" title="Manage">Olá Usuario</a>
