--- a/src/web/NSE.WebApp.MVC/Views/Identidade/Registro.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Identidade/Registro.cshtml
@@ -1,18 +1,20 @@
 ﻿@model NSE.WebApp.MVC.Models.UsuarioRegistro
 
 @{
-    ViewData["Title"] = "Registro";
+    ViewData["Title"] = "Registro de novo usuário";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-12">
-        <section>
-            <form method="post">
-                <h4>Registre-se e comece a comprar hoje mesmo</h4>
-                <hr />
+<section class="section-conten padding-y container" style="min-height: 35vh">
+    
+    <vc:Summary></vc:Summary>
 
-                <vc:Summary></vc:Summary>
+    <div class="card mx-auto" style="max-width: 380px; margin-top: 100px;">
+
+        <div class="card-body">
+            <h4 class="card-title mb-4">Seja bem vindo!</h4>
+
+            <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+
                 <div class="form-group">
                     <label asp-for="Nome"></label>
                     <input asp-for="Nome" class="form-control" />
@@ -30,6 +32,7 @@
                     <input asp-for="Email" class="form-control" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
+
                 <div class="form-group">
                     <label asp-for="Senha"></label>
                     <input type="password" asp-for="Senha" class="form-control" />
@@ -41,15 +44,17 @@
                     <input type="password" asp-for="SenhaConfirmacao" class="form-control" />
                     <span asp-validation-for="SenhaConfirmacao" class="text-danger"></span>
                 </div>
-                <br />
+
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary btn-block">Registrar</button>
                 </div>
             </form>
-        </section>
+        </div>
+        <div class="card-footer text-center">Já tem uma conta?<a asp-controller="Identidade" asp-action="Login"> Entrar</a></div>
     </div>
-</div>
+
+</section>
 
 @section Scripts {
-<partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
